--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ body{
     height: 100vh;
     width:100vh;
 
-    background-color: red;
-    background-image: linear-gradient(to right , #FDC830,  #F37335); 
+    /*background-color: #0083B0;*/
+   background-image: linear-gradient(to bottom right , #3494E6 ,#EC6EAD);
 }
