--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 
 body{
-    margin: 0;
+    position: relative;
+    margin:0 auto;
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     
-
-
     /*background-color: #0083B0;*/
    background-image: linear-gradient(to bottom right , #3494E6 ,#EC6EAD);
 }
@@ -13,20 +12,26 @@ body{
 
 
 .Logo > img {
-  width: 10%;
+    position: absolute;
+  width: 7%;
   height: auto;
+  top: 3%;
+  left: 6%
   
 }
 
-.Logo{
-
-    border: 1px solid red; 
-
-
-}
 
 .title{
+    position: absolute;
+  
+    width: 100%;
+    top:3%;
+    left: 2%;
+    /*border: 1px solid red; */
+    text-align: center;
     white-space: nowrap;
+    margin: 0 auto;
+
     /*width: 100vh;*/
    /* height:20vh;*/
 
@@ -34,11 +39,24 @@ body{
 }
 
 .title > h1{
-    font-size:3.5vw;
-    text-align: 50%;
-    left: 40%;
+    font-size:3vw;
     color: white;
-    font-weight: bold;
-    font-family: 'Calibri', sans-serif;
-    position: relative;
+    font-family: 'Verdana', sans-serif;
+
+}
+
+.header{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top:15%;
+    
+}
+
+
+.header > h2{
+    font-size: 1.8vw;
+    color:white;
+    font-family: 'Verdana', sans-serif;
+
 }
