--- a/style.css
+++ b/style.css
@@ -72,19 +72,44 @@ body{
 }
 
 .button{
-    background-color: red;
-        cursor:pointer;
+    position: relative;
+  display: inline-block;
+    text-align: center;
+    background-color: transparent;
+    border-radius: 8px;
+    color:white;
+    border-width: 0.5px;
+    border-color: white;
+    border-style: solid;
+    box-shadow: none;
+    outline:none;
+    cursor:pointer;
     overflow: hidden; 
     position: absolute;
+    width: 10vw;
+    height: 7vh;
     left: 45%;
-    top: 33%;
+    top: 32%;
 }
+
+.button:hover{
+    background: linear-gradient(to bottom right , #3494E6 ,#EC6EAD);
+    transform: scale(1.3) perspective(1px);
+}
+
+.button:active{
+    transform: translate(0px, 5px);
+  -webkit-transform: translate(0px, 5px);
+  box-shadow: 0px 1px 0px 0px;
+}
+
+
 
 .idea{
     position: relative;
     font-size: 2vw;
     text-align: center;
-    top: 40vh;
+    top: 42vh;
   
 }
 
@@ -154,28 +179,28 @@ body{
     white-space: nowrap;
 }
 
-.names > p1{
+.name1 > a{
     font-size: 1.5vw;
     position: absolute;
     top: 85vh;
     left: 10vw;
 }
 
-.names > p2{
+.name2 > a{
     font-size: 1.5vw;
     position: absolute;
     top: 85vh;
     left: 35vw;
 }
 
-.names > p3{
+.name3 > a{
     font-size: 1.5vw;
     position: absolute;
     top: 85vh;
     left: 60vw;
 }
 
-.names > p4{
+.name4 > a{
     font-size: 1.5vw;
     position: absolute;
     top: 85vh;
@@ -222,8 +247,11 @@ body{
 }
 
 a:visited { text-decoration: none; color:white; }
-a:hover {  cursor: pointer; color:white; }
+a:hover {  cursor: pointer; color:white; text-decoration: underline; }
 a:focus { text-decoration: none; color:white; }
-a:hover, a:active { cursor:pointer; color:white }
+a:hover, a:active { cursor:pointer;  color:white }
 a, u {text-decoration: none;}
+
+
+
 
