changed numerous files for logo functionality

--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body{
   
 }
 
+.Logo:hover{
+    cursor: pointer;
+}
+
 .Logo1 > img {
     position: absolute;
   width: 25%;
@@ -89,7 +93,7 @@ body{
     width: 10vw;
     height: 7vh;
     left: 45%;
-    top: 32%;
+    top: 32vh;
 }
 
 .button:hover{
@@ -252,6 +256,16 @@ a:focus { text-decoration: none; color:white; }
 a:hover, a:active { cursor:pointer;  color:white }
 a, u {text-decoration: none;}
 
+.main{
+    position: relative;
+    color:white;
+    font-family: 'Verdana', sans-serif;
+}
 
+.main > p{
+    position: absolute;
+    font-size: 2vw;
+    top: 50vh;
+    left:50%;
 
-
+}
